Fix search collapse/expand

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -299,3 +299,8 @@ li a {
 .pl-none {
   padding-left: 0 !important;
 }
+
+.search-badge {
+  padding: 5px 10px 3px 8px !important;
+  margin-left: 10px;
+}
